2015-10-26  Uwe Schulzweida

	* using CDI library version 1.6.9
	* Version 1.6.9 released
	* clipping: update to YAC version 1.0.3

2015-04-10  Uwe Schulzweida

	* New operator: after - ECHAM standard post processor

2015-04-02  Uwe Schulzweida

	* Seltime: abort if no timestep is seleced

2015-03-27  Uwe Schulzweida

	* Fldstat: added parameter noweights to use constant grid cell area weights
	* expr: added support for operator ?:,&&,||

2015-03-26  Uwe Schulzweida

	* using CDI library version 1.6.8
	* Version 1.6.8 released

2015-03-25  Uwe Schulzweida

	* expr: added support for operator ?: (short ifelse)
	* eof, eof3d: use area weights instead of no weights
	* vertmean, vertavg: changed to weighted means if layer bounds are available

2015-03-23  Uwe Schulzweida

	* expr: added support for operator ?: (short ifelse test version)

2015-03-22  Uwe Schulzweida

	* configure: check whether netCDF4/HDF5 is threadsafe

2015-03-21  Uwe Schulzweida

	* expr: added support for logical operator <=>

2015-03-20  Uwe Schulzweida

	* Remap: renamed env. variable CDO_REMAP_NORMALIZE_OPT to CDO_REMAP_NORM
	* Remap: renamed env. variable CDO_REMAP_SEARCH_RADIUS to CDO_REMAP_RADIUS

2015-03-19  Uwe Schulzweida

	* remapycon:  correct weights only for norm_opt=fracarea

2015-03-18  Uwe Schulzweida

	* expr: added support for logical operators <, >, <=, >=, !=, ==

2015-03-17  Uwe Schulzweida

	* gradsdes: grib index file is empty (introduced in 1.6.7)

2015-03-11  Uwe Schulzweida

	* delname: added wildcard support
	* wildcardmatch(): use fnmatch() if available
	* eofspatial: removed scaling with grid cell area weights (bug fix)
	* eoftime: removed scaling with grid cell area weights (bug fix)

2015-03-10  Uwe Schulzweida

	* ensSTAT: added optional parameter count to count the number of valid values

2015-03-09  Uwe Schulzweida

	* setpartabp, setpartabn: added optional parameter convert to convert the units

2015-02-04  Uwe Schulzweida
