@@ -473,6 +473,8 @@ static char *SelectHelp[] = {
     "    ltype             INTEGER Comma separated list of GRIB level types.",
     "    levidx            INTEGER Comma separated list of index of levels.",
     "    level             FLOAT   Comma separated list of vertical levels.",
+    "    startdate         STRING  Start date (format YYYY-MM-DDThh:mm:ss).",
+    "    enddate           STRING  End date (format YYYY-MM-DDThh:mm:ss).",
     "    minute            INTEGER Comma separated list of minutes.",
     "    hour              INTEGER Comma separated list of hours.",
     "    day               INTEGER Comma separated list of days.",
