@@ -4,6 +4,10 @@
 	* Version 1.6.9 released
 	* clipping: update to YAC version 1.0.3
 
+2015-04-16  Uwe Schulzweida
+
+	* Select: added parameter startdate, enddate
+
 2015-04-10  Uwe Schulzweida
 
 	* New operator: after - ECHAM standard post processor
